# is-even-odd-wasm

./: Cargo.toml
is-even/: Cargo.toml  README.md
is-even/src/: lib.rs
is-odd/: Cargo.toml  README.md
is-odd/src/: lib.rs
