[package]
name = "is-even-wasm"
version = "0.1.0"
edition = "2021"
authors = ["Arun Woosaree <arun@woosaree.xyz>"]
description = "it's in WASM so it must be faster.. right? Inspired by https://www.npmjs.com/package/is-even"
license = "MIT"
repository = "https://github.com/Arunscape/is-even-odd-wasm/is-even"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
